First version of Part 1 and 2 of the manual converted to rst. The images are not committed yet. Minor additions to usingrst

--- a/doc/readthedocs/_static/pencil.css
+++ b/doc/readthedocs/_static/pencil.css
@@ -68,3 +68,9 @@ td div.admonition {
 .icon-home {
     font-size: 24px !important;
 }
+
+/* align math number to the right */
+
+.eqno {
+    float: right;
+}
